# show-data

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  storage.rs
src-tauri/src/commands/: connection.rs  query.rs
src-tauri/src/db/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/components/: CellDetailModal.tsx  ConnectionDialog.tsx  ContextMenu.tsx  DataGrid.tsx  ResultsPanel.tsx  RowEditModal.tsx  SQLEditor.tsx  Sidebar.tsx  TabManager.tsx
src/lib/: sql.ts  tauri.ts
src/stores/: useAppStore.ts
src/types/: index.ts
